# ros_control_boilerplate

./: LICENSE.md  package.xml
Arduino sketches/Servo_control/: Servo_control.ino
mfbot_control/: CMakeLists.txt
mfbot_control/include/mfbot_control/: mfbot_hw_interface.h
mfbot_control/launch/: mfbot_test_trajectory.launch
mfbot_control/src/: mfbot_hw_interface.cpp
ros_control_boilerplate/: CMakeLists.txt
ros_control_boilerplate/include/ros_control_boilerplate/: generic_hw_control_loop.h
ros_control_boilerplate/mfbot_control/config/: mfbot_controllers.yaml
ros_control_boilerplate/mfbot_control/launch/: mfbot_hardware.launch  mfbot_simulation.launch  mfbot_visualize.launch
ros_control_boilerplate/mfbot_control/src/: mfbot_hw_interface.cpp  mfbot_hw_main.cpp
ros_control_boilerplate/msg/: mfbot_joint_states.msg
ros_control_boilerplate/src/tools/: test_trajectory.cpp
src/: generic_hw_control_loop.cpp  sim_hw_main.cpp
